--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <!-- home.component.html -->
 
 <!-- Intro Section -->
+ <appNav></appNav>
 <div class="intro">
     <div class="container">
       <div class="intro-text">
